tests/errors/wrong_type_usage/wrong_enum_variant.meth
enum miky [mimi, btoot, ghandi];

miky x = miky.mimi;

miky y = miky.raining;